gcc/testsuite/rust/rustc/ui/parser/issues/issue-111416.rs
fn main() {
    let my = monad_bind(mx, T: Try); // { dg-error "" "" { target *-*-* } }
}

